# alue

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_tgi.sh
alue/: config.py  convert_to_json.py  convert_to_squad.py  custom_components.py  doc_retrieval_metrics.py  evaluation.py  inference.py  io_utilities.py  llm_judge_metrics.py  model_engines.py  output_normalizations.py  rag_utils.py  settings.py  squad_evaluation.py
data/: README.md
data/ASRS_rag/: rag_qa.json
data/NASA_NODIS_rag/: rag_qa.json
data/NASA_Standards_rag/: rag_qa.json
data/NASA_Systems_Engineering_rag/: rag_qa.json
data/NOTAM_binary_classification/: 2_3_classification_test.json
data/NTML_sentiment_analysis/: 2_2_NTML_SA_v1.json
data/NTRS_rag/: rag_qa.json
data/Site_Licenses_rag/: Site Licenses.json
data/aviation_knowledge_exam/: 3_1_aviation_test.json
docs/: creating_datasets.md  model_configuration.md  running_models.md
docs/tutorials/: 01-getting-started.md
schemas/asrs_factors_classification/: output_schema.json
schemas/aviation_exam/: mcqa_schema.json
schemas/extractive_qa/: adjudicator_schema.py
schemas/glossary_terms/: adjudicator_schema.json  definition_generation_schema.json
schemas/ntsb_damage_classification/: output_schema.json
schemas/ntsb_extract_tail_number/: output_schema.json
schemas/pirep_classification/: output_schema.json
scripts/: binary_classification.py  extractive_qa.py  mcqa.py  rag.py  sequence_classification.py  summarization.py  token_classification_ner.py
templates/asrs_factors_classification/: gemma_instruct.jinja2  llama_2_chat.jinja2  llama_3_instruct.jinja2  mistral_mixtral_instruct.jinja2  qwen_instruct.jinja2
templates/asrs_rag/: llama_3_instruct.jinja2
templates/asrs_summarization/: gemma_instruct.jinja2  llama_2_chat.jinja2  llama_3_instruct.jinja2  mistral_mixtral_instruct.jinja2  qwen_instruct.jinja2
templates/aviation_exam/: aviation_mistral.jinja2  gemma_instruct.jinja2  llama_2_chat.jinja2  llama_3_instruct.jinja2  mistral_mixtral_instruct.jinja2  qwen_instruct.jinja2
templates/glossary_terms/: llama_3_instruct_correctness_template.jinja2  llama_3_instruct_definition_generation.jinja2
templates/llm_judge/: claim_contained_reference.jinja2  claim_contradicts_reference.jinja2  claim_decomposition.jinja2  context_relevancy.jinja2  context_supported_claim.jinja2  main_idea.jinja2  prompts.py
templates/ntsb_damage_classification/: aviation_mistral.jinja2  aviation_schema.jinja2  gemma_instruct.jinja2  llama_2_chat.jinja2  llama_3_instruct.jinja2  mistral_mixtral_instruct.jinja2  qwen_instruct.jinja2
templates/ntsb_extract_tail_number/: aviation_mistral.jinja2  gemma_instruct.jinja2  llama_2_chat.jinja2  llama_3_instruct.jinja2  mistral_mixtral_instruct.jinja2  qwen_instruct.jinja2
templates/pirep_classification/: aviation_mistral.jinja2  llama_2_chat.jinja2  llama_3_instruct.jinja2  mistral_mixtral_instruct.jinja2  qwen_instruct.jinja2
templates/rag/: aviation.jinja2  aviation_mistral.jinja2  llama_2_chat.jinja2  llama_3_instruct.jinja2  mistral_mixtral_instruct.jinja2  qwen_instruct.jinja2
